Made some slight tweaks to avoid wrapping and spinner problems on an iphone X.

--- a/app/styles/scss/abstracts/_mixins.scss
+++ b/app/styles/scss/abstracts/_mixins.scss
@@ -1,18 +1,18 @@
 @mixin breakpoint($point) {
   @if $point == huge { 
-    @media (max-width: $screen-huge-max) { @content ; } 
+    @media screen and (max-width: $screen-huge-max) { @content ; } 
  } 
   @else if $point == xl { 
-    @media (max-width: $screen-xl-max) { @content ; } 
+    @media screen and (max-width: $screen-xl-max) { @content ; } 
  } 
    @else if $point == lg { 
-    @media (max-width: $screen-lg-max) { @content ; } 
+    @media screen and (max-width: $screen-lg-max) { @content ; } 
  } 
   @else if $point == md { 
-      @media (max-width: $screen-md-max)  { @content ; }
+      @media screen and (max-width: $screen-md-max)  { @content ; }
    }
    @else if $point == sm {
-      @media (max-width: $screen-sm-max)  { @content ; }
+      @media screen and (max-width: $screen-sm-max)  { @content ; }
  
    }
  }
