--- a/app/styles/scss/components/_imageview.scss
+++ b/app/styles/scss/components/_imageview.scss
@@ -97,6 +97,11 @@
 			height: 22rem;
 			display: block;
 
+			img{
+				max-width:100%;
+				margin:auto;
+			}
+			
 			@include breakpoint(md){
 				width:100%;
 				margin-left:auto;
@@ -110,13 +115,11 @@
 				margin-left:auto;
 				margin-right: auto;
 				margin-top:5rem;
-				height: 15rem;
+				height: 10rem;
 
-			}
-
-			img{
-				max-width:100%;
-				margin:auto;
+				img{
+					height: 8rem;
+				}
 			}
 		}
 
@@ -128,10 +131,16 @@
 			display:none;
 
 			@include breakpoint(md){
-				display: block;
+				-webkit-flex: 1; /* Safari 6.1+ */
+				-ms-flex: 1; /* IE 10 */ 
+				flex: 1;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				margin: auto; 
 				text-align: center;
 				margin-top:1.5rem;
+				flex-wrap: nowrap;
 
 				.mobile-btn{
 					background-color: rgba(255, 255, 255, 0);
